--- a/templates/base.html
+++ b/templates/base.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Karla:wght@700&display=swap" rel="stylesheet">
+    
     <title>
         {% block titulo %}
         {% endblock titulo %}
     </title>
     {% block css %}{% endblock css %}
 </head>
-<body style="font-family: 'Oxygen', sans-serif;">
+<body">
     
     {% block content %}
         
