--- a/templates/deptos/deptos.html
+++ b/templates/deptos/deptos.html
@@ -1,7 +1,14 @@
+{% extends 'deptos/base_depto.html' %}
 
-{% for depto in deptos  %}
-   <li> {{depto}}</li>
-{% endfor %}
-    
 
-<p>hola</p>
+{% block title %}
+   
+{% endblock title %}
+
+{% block content %}
+{% include 'includes/header.html' %}
+{% endblock content %}
+   
+
+
+
