--- a/templates/home/base_home.html
+++ b/templates/home/base_home.html
@@ -2,8 +2,9 @@
 {% load  static %}
 
 {% block css %}
-<link rel="stylesheet" href="{% static 'css/app.css' %}">
+<link rel="stylesheet" href="{% static 'css/index.css' %}">
 {% endblock css %}
+
 
 {% block js %}
 
