--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -4,32 +4,48 @@
 {% block content %}
 {% include 'includes/header.html' %}
 
+<div class="container-sm">
+    <form method="POST"> {% csrf_token %}
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email </label>
+          <input type='text' name="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Introduzca su email">
+     
+        </div>
+        <div class="form-group">
+          <label for="exampleInputPassword1">Contraseña</label>
+          <input type="password" class="form-control" name="password" id="id_password" placeholder="Contraseña">
+        </div>
+      
+        <button type="submit" class="btn btn-dark">Entrar</button>
+      </form>
+</div>
 
-<div class="grid-container">
-    <div class="grid-x grid-margin-x align-center">
-        <form class="cell medium-6 large-4" style="margin-top: 2em;" method="POST"> {% csrf_token %}
-            <div class="card" style="width: 100%;">
-                <div class="card-divider">
+<!--<div class="container">
+    <div class="align-items-center">
+        <form class="" style="margin-top: 2em;" method="POST"> {% csrf_token %}
+            <div class="" style="width: 100%;">
+                <div class="">
                   <h4>Acceso de usuario</h4>
                 </div>
                 <div class="card-section">
-                        <div class="cell medium-12">
+                        <div class="">
                             <label>Email:
                        {{form.email}}
                             </label>
                         </div>
-                        <div class="cell medium-12">
+                        <div class="">
                             <label>Contraseña:
                          {{form.password}}
                             </label>
                         </div>
                         <button type="submit" class="cell button" id="fuente">Acceder</button>
-                        <a class="cell button" id="fuente" href="{% url 'users_app:user-register'%}">Registrar</a>
+                        <a class="btn-dark" id="fuente" href="{% url 'users_app:user-register'%}">Registrar</a>
                 </div>
             </div>
         </form>
     </div>
-</div>
+</div>-->
+
 {% include 'includes/footer.html' %} 
 
 {% endblock content %}
