--- a/templates/deptos/deptos.html
+++ b/templates/deptos/deptos.html
@@ -10,7 +10,7 @@
 
 <div class="container-sm">
     {% for depto in  deptos %}
-    <li><a href="{% url 'depto_app:deptos' %}">{{depto}}</a></li>
+    <li><a href="{% url 'prueba_app:listarcarpetas' %}">{{depto}}</a></li>
     {% endfor %}
 </div>
 
